# stm32-z80-rom-emu

./: .mxproject  CMakeLists.txt  Makefile  README.md  rom_emu.ioc
Core/Inc/: main.h  main_cycle.h
Core/Src/: gpio.c  main.c  main_cycle.c  syscalls.c  sysmem.c  usart.c
Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal.c
z80/: halt.asm  halt.ihx  halt.lst  halt.rel  halt.sym  hex2source.py  main.asm  main.ihx  main.lst  main.rel  main.sym  rom.c  rom.h
